<resources>
    <string name="app_name">SGV Player</string>
    <string name="title_activity_main">Music</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Main menu -->
    <string name="action_music">Music</string>
    <string name="action_classifier">Music classifier</string>
    <string name="action_settings">Settings</string>

    <!--Permisions-->
    <string name="storage_permissions">Storage permissions needed</string>
    <!-- Music action strings -->
    <string name="music_all">All songs</string>
    <string name="music_artists">Artists</string>
    <string name="music_albums">Albums</string>
    <string name="music_genres">Genres</string>
    <string name="music_playlists">Playlists</string>
    <string name="music_folders">Folders</string>
    <string name="music_main">Music</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ServiceStoped">Service Stoped</string>

    <!--Song Metadata-->
    <string name="title">Title</string>
    <string name="artist">Artist</string>

    <!--Tabbs-->
    <string-array name="tabs_name">
        <item>@string/music_main</item>
        <item>@string/music_all</item>
        <item>@string/music_artists</item>
        <item>@string/music_albums</item>
        <item>@string/music_genres</item>
        <item>@string/music_playlists</item>
        <item>@string/music_folders</item>
    </string-array>
    <string name="title_activity_player">PlayerActivity</string>

    <string name="player_notification_title_template">Player: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="player_notification_placeholder_text_template">You said %1$s and lorem ipsum dolor
        sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel semper
        venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis. Pellentesque
        vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper ornare lacus. Duis
        ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis viverra rhoncus sit amet
        nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec tortor.
    </string>

    <!-- ImageView content descriptors -->
    <string name="album_cover">Album Cover</string>
</resources>
