<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/nav_header_margin"
    android:background="@color/transparent"
    tools:context=".ui.uiMusicTabs.MusicMenuFragment">

    <Button
        android:id="@+id/all_songs_button"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:text="@string/music_all"
        android:alpha="0.6"
        android:layout_gravity="start|top"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/artists_button"
        android:layout_toStartOf="@+id/artists_button" />

    <Button
        android:id="@+id/artists_button"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:text="@string/music_artists"
        android:alpha="0.6"
        android:layout_gravity="start|center"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp" />

    <Button
        android:id="@+id/albums_button"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:text="@string/music_albums"
        android:alpha="0.6"
        android:layout_gravity="start|bottom"
        android:layout_below="@+id/all_songs_button"
        android:layout_alignLeft="@+id/all_songs_button"
        android:layout_alignStart="@+id/all_songs_button" />

    <Button
        android:id="@+id/genres_button"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:text="@string/music_genres"
        android:alpha="0.6"
        android:layout_gravity="end|center"
        android:layout_below="@+id/artists_button"
        android:layout_alignLeft="@+id/artists_button"
        android:layout_alignStart="@+id/artists_button" />

    <Button
        android:id="@+id/playlists_button"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:text="@string/music_playlists"
        android:alpha="0.6"
        android:layout_gravity="end|top"
        android:layout_below="@+id/albums_button"
        android:layout_alignLeft="@+id/albums_button"
        android:layout_alignStart="@+id/albums_button" />

    <Button
        android:id="@+id/folders_button"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:text="@string/music_folders"
        android:alpha="0.6"
        android:layout_gravity="end|bottom"
        android:layout_below="@+id/genres_button"
        android:layout_alignLeft="@+id/genres_button"
        android:layout_alignStart="@+id/genres_button" />

</RelativeLayout>
